z-index fix for FF3

--- a/openflights/openflights.css
+++ b/openflights/openflights.css
@@ -57,12 +57,14 @@
     top: 1em;
     position: absolute;
     font-size:1.5em;
+    z-index: 1000;
 } 
 
 #newairport { 
     right: 260px;
     top: 60%;
     position: absolute;
+    z-index: 1000;
 } 
 
 #sideBar
